Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/InvalidPackageAnno.java
/*
 * @test /nodynamiccopyright/
 * @bug 8054964
 * @summary Invalid package annotations
 * @author sogoel
 *
 * @compile/fail/ref=InvalidPackageAnno.out -XDrawDiagnostics  bar/package-info.java
 */

package bar;

