Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/InvalidPackageAnno.out
package-info.java:3:1: compiler.err.annotation.type.not.applicable
1 error
